--- a/HTML/month_w.html
+++ b/HTML/month_w.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Wetterstation (MONTH)</title>
+    <title>Wetterstation W (MONTH)</title>
     <style>
         body {
             font-family: system-ui, sans-serif;
@@ -74,7 +74,7 @@
 <body>
     <div id="container">
         <h1>Wetterstation Chappelihof 24</h1>
-        <p>Plotübersicht MONTH</p>
+        <p>Plotübersicht W (MONTH)</p>
 
         <!-- Status Übersicht oben -->
         <img id="status-image" src="" alt="Status Tabelle">
@@ -92,7 +92,7 @@
     </div>
 
     <script>
-        const basePath = "../log/reports/month/";
+        const basePath = "../log/reports/month_w/";
         const cacheBust = Date.now();   // 🔥 Cache Busting
         let images = [];
         let currentIndex = 0;
