--- a/HTML/week_w.html
+++ b/HTML/week_w.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Wetterstation (DAY)</title>
+    <title>Wetterstation W (WEEK)</title>
     <style>
         body {
             font-family: system-ui, sans-serif;
@@ -74,7 +74,7 @@
 <body>
     <div id="container">
         <h1>Wetterstation Chappelihof 24</h1>
-        <p>Plotübersicht DAY</p>
+        <p>Plotübersicht W (WEEK)</p>
 
         <!-- Status Übersicht oben -->
         <img id="status-image" src="" alt="Status Tabelle">
@@ -90,8 +90,9 @@
         <img id="main-image" src="" alt="Plot Bild">
         <div id="caption"></div>
     </div>
+
     <script>
-        const basePath = "../log/reports/day/";
+        const basePath = "../log/reports/week_w/";
         const cacheBust = Date.now();   // 🔥 Cache Busting
         let images = [];
         let currentIndex = 0;
