--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,13 +30,15 @@
             padding: 15px;
             margin: 12px 0;
             font-size: 1.1rem;
+            font-weight: 500;
             border: 1px solid #aaa;
             border-radius: 10px;
             background: #e8e8e8;
             cursor: pointer;
             text-decoration: none;
             color: black;
-            transition: background 0.2s;
+            transition: background 0.2s ease;
+            box-sizing: border-box;
         }
 
         .page-button:hover {
