--- a/HTML/year_th.html
+++ b/HTML/year_th.html
@@ -33,8 +33,8 @@
         }
 
         #main-image {
-            max-width: 100%;
-            max-height: 70vh;
+            width: 100%;
+            height: auto;
             border-radius: 8px;
             border: 1px solid #ddd;
         }
