--- a/HTML/day_w.html
+++ b/HTML/day_w.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <title>Wetterstation W (DAY)</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             font-family: system-ui, sans-serif;
             margin: 0;
             padding: 20px;
             background: #f3f3f3;
             text-align: center;
+            overflow-x: hidden;
         }
 
         h1 {
@@ -23,6 +28,7 @@
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 14px rgba(0, 0, 0, 0.12);
+            overflow: visible;
         }
 
         #status-image {
@@ -30,6 +36,7 @@
             border: 1px solid #ccc;
             border-radius: 10px;
             margin-bottom: 25px;
+            display: block;
         }
 
         #main-image {
@@ -38,6 +45,7 @@
             border-radius: 8px;
             border: 1px solid #ddd;
             display: block;
+            max-height: none;
         }
 
         #caption {
